--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>❤jennie❤</title>
+    <title>Haagen-Dazs</title>
 
     <!--http://www.html5rocks.com/en/mobile/mobifying/-->
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
@@ -130,19 +130,19 @@
             //        console.log("window.navigator.language",window.navigator.language);
 
             if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
-                document.title = "❤jennie❤";
+                document.title = "Haagen-Dazs";
             } else if (window.navigator.language == "zh-TW") {
-                document.title = "❤jennie❤";
+                document.title = "Haagen-Dazs";
             } else if (window.navigator.language == "zh-HK") {
-                document.title = "❤jennie❤";
+                document.title = "Haagen-Dazs";
             } else if (window.navigator.language == "ko-KR") {
-                document.title = "❤jennie❤";
+                document.title = "Haagen-Dazs";
             } else if (window.navigator.language == "ja-JP") {
-                document.title = "❤jennie❤";
+                document.title = "Haagen-Dazs";
             } else if (window.navigator.language == "th-TH") {
-                document.title = "❤jennie❤์";
+                document.title = "Haagen-Dazs";
             } else {
-                document.title = "❤jennie❤";
+                document.title = "Haagen-Dazs";
             }
 
 
